--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "helmet": "^4.1.1",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pug": "^3.0.0"
   },
   "scripts": {
