--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "start": "nodemon --exec babel-node init.js --delay 1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.1.2"
   }
 }
