--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 1"
+    "dev:server": "nodemon --exec babel-node init.js --delay 1",
+    "dev:assets": "webpack"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
