#4.1 Styles with Webpack part One

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^4.1.1",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
@@ -21,7 +22,8 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 1",
-    "dev:assets": "webpack"
+    "dev:assets": "WEBPACK_ENV=development webpack",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
