--- a/package.json
+++ b/package.json
@@ -7,23 +7,29 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^4.1.1",
+    "mini-css-extract-plugin": "^1.3.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^4.0.4",
     "pug": "^3.0.0",
+    "sass-loader": "^10.0.5",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 1",
-    "dev:assets": "WEBPACK_ENV=development webpack",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
