--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "mini-css-extract-plugin": "^1.3.0",
     "mongoose": "^5.10.11",
