--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
