--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "autoprefixer": "^10.0.2",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
