change prebuild code

--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
     "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
-    "copyAll": "xcopy src\\static build\\static /e /h /c /y /i && xcopy src\\views build\\views /e /h /c /y /i",
+    "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "prebuild": "rd /s/q build",
+    "prebuild": "rm -rf build",
     "start": "node build/init.js"
   },
   "devDependencies": {
