--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "prebuild": "rm -rf build",
-    "start": "set PRODUCTION=true node build/init.js",
-    "prestart":"npm run build"
+    "start": "set PRODUCTION=true node build/init.js"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
