--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "start": "set PRODUCTION=true node build/init.js",
+    "start": "node build/init.js",
     "tunnel": "lt --port 4000"
   },
   "devDependencies": {
