--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "webpack-cli": "^4.2.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss' --ignore 'static'",
-    "dev:assets": "cd src && webpack --mode=development  webpack -w",
-    "build:assets": "cd src && webpack --mode=production",
-    "build:server": "babel src --out-dir build --ignore 'src/assets --ignore 'src/static' --ignore 'webpack.config.js",
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 1 --ignore 'scss'",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "start": "PRODUCTION=true node build/init.js",
-    "prestart": "npm run build"
+    "tunnel": "lt --port 4000",
+    "start": "PRODUCTION=true node build/init.js"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
