--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
     "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
-    "copyAll": "cp -R src/static build && cp -R src/views build",
+    "copyAll": "cp -R src/static build && cp -R src/views build && rm -rf assets && rm -rf webpack.config.js",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "tunnel": "lt --port 4000",
     "start": "PRODUCTION=true node build/init.js"
