--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
     "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
     "copyAll": "cp -R src/static build && cp -R src/views build",
-    "build": "npm run build:server && npm run build:assets && npm run copyAll && rm -rf build/assets && rm -rf build/webpack.config.js",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "tunnel": "lt --port 4000",
     "start": "PRODUCTION=true node build/init.js"
   },
