--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "wetube",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.19.0"
+    },
   "description": "Cloning Youtube with Vanilla and NodeJS",
   "author": "Choi Jae Won",
   "dependencies": {
@@ -47,7 +50,7 @@
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "tunnel": "lt --port 4000",
-    "start": "PRODUCTION=true node build/init.js"
+    "start": "PRODUCTION=true node init.js"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
