--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
+  "babel":{
+    "presets":["@babel/preset-env"]
+  },
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/init.js --delay 1 --ignore 'scss'",
     "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
