--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "autoprefixer": "^10.0.2",
+    "aws-sdk": "^2.819.0",
     "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
@@ -30,6 +31,7 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^5.0.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
@@ -42,8 +44,10 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
-  "babel":{
-    "presets":["@babel/preset-env"]
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss' --ignore 'static' ",
