--- a/package.json
+++ b/package.json
@@ -44,10 +44,8 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+  "babel":{
+    "presets":["@babel/preset-env"]
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss' --ignore 'static' ",
